# typst-studio

./: .gitignore  Cargo.toml  README.md  plan.md
assets/themes/: dark.json  high_contrast_dark.json  high_contrast_light.json  light.json
crates/bidi-text/src/: algorithm.rs  cursor.rs  layout.rs
crates/editor-core/src/: buffer.rs  lib.rs  operations.rs  selection.rs
crates/editor-core/src/buffer/: word_boundaries.rs
crates/editor_core/: Cargo.toml
crates/editor_core/src/: buffer.rs  config.rs  document.rs  lib.rs  project.rs  selection.rs  state.rs
crates/preview/: Cargo.toml
crates/preview/src/: lib.rs  renderer.rs  viewport.rs
crates/typst-integration/src/: compiler.rs  world.rs
crates/typst_integration/: Cargo.toml
crates/typst_integration/src/: compiler.rs  lib.rs  lsp_client.rs
crates/ui/: Cargo.toml
crates/ui-components/: Cargo.toml
crates/ui-components/src/: lib.rs  panels.rs
crates/ui-components/src/editor_view/: cursor_renderer.rs  menu_bar.rs  mod.rs  overlays.rs  scrollbar.rs  status_bar.rs  top_nav.rs
crates/ui-components/src/input/: input_handler.rs  key_bindings.rs  mod.rs
crates/ui-components/src/panels_layout/: mod.rs
crates/ui-components/src/rendering/: font_management.rs  glyph_cache.rs  line_layout.rs  mod.rs  text_shaping.rs  viewport.rs
crates/ui-components/src/syntax/: highlighting.rs  theme.rs
crates/ui/src/: app.rs  components.rs  console.rs  editor.rs  lib.rs  navbar.rs  preview_pane.rs  sidebar.rs  theme.rs  workspace.rs
crates/ui/src/components/: button.rs  clickable.rs  context_menu.rs  dropdown.rs  icon.rs  input.rs  scrollbar.rs  splitter.rs  status_bar.rs  tabs.rs  tooltip.rs
src/: app.rs  main.rs
