[package]
name = "typst-studio"
version = "0.1.0"
edition = "2021"
authors = ["Hillel Nagid"]
description = "A native cross-platform editor for Typst with bidirectional text support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hillel-Nagid/typst-editor"

[workspace]
members = ["crates/*"]
resolver = "2"

[dependencies]
# Core dependencies
editor-core = { path = "crates/editor-core" }
# typst-integration = { path = "crates/typst-integration" }  # TODO: Fix API compatibility in Phase 2
bidi-text = { path = "crates/bidi-text" }
preview = { path = "crates/preview" }
lsp-client = { path = "crates/lsp-client" }
ui-components = { path = "crates/ui-components" }

# GPUI framework
gpui = "0.2.1"

# Typst - Optional feature since not used in main app yet
typst = { version = "0.12", optional = true }
typst-syntax = { version = "0.13.1", optional = true }

# Text processing
ropey = "1.6"
unicode-bidi = "0.3"
unicode-segmentation = "1.11"

# Async runtime
tokio = { version = "1.35", features = [
    "rt-multi-thread",
    "net",
    "fs",
    "io-util",
    "time",
    "macros",
] }

# File watching - minimal features for now
notify = { version = "6.0", features = ["default"] }

# PDF rendering - optional for Phase 2
# pdfium-render = "0.8"  # Disabled until actually used in preview

# Serialization
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[features]
default = []
full-typst = ["typst", "typst-syntax"]

[dev-dependencies]
# Testing
proptest = "1.4"
mockall = "0.12"
assert_cmd = "2.0"
tempfile = "3.8"

# Benchmarking
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[profile.rust-analyzer]
inherits = "dev"
panic = 'unwind'
