[workspace]
members = [
    "crates/editor_core",
    "crates/typst_integration",
    "crates/preview",
    "crates/ui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hillel Nagid"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# UI Framework
gpui = { git = "https://github.com/zed-industries/zed", default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Text processing
ropey = "1.6"
unicode-bidi = "0.3"
unicode-segmentation = "1.11"

# Typst integration
typst = "0.14"
typst-syntax = "0.14"

# PDF rendering
pdfium-render = "0.8.34"

# LSP
lsp-types = "0.95"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Configuration
toml = "0.8"
directories = "5.0"

# File watching
notify = "6.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
parking_lot = "0.12"
lru = "0.12"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"

[package]
name = "typst-studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
gpui.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

editor_core = { path = "crates/editor_core" }
typst_integration = { path = "crates/typst_integration" }
preview = { path = "crates/preview" }
ui = { path = "crates/ui" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[[bin]]
name = "typst-studio"
path = "src/main.rs"
