[package]
name = "editor_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
regex.workspace = true
ropey.workspace = true
unicode-segmentation.workspace = true
unicode-bidi.workspace = true
directories.workspace = true
