[package]
name = "typst_integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
typst.workspace = true
typst-syntax.workspace = true
lsp-types.workspace = true
serde.workspace = true
serde_json.workspace = true

