[package]
name = "ui-components"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.1"
editor-core = { path = "../editor-core" }
bidi-text = { path = "../bidi-text" }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
tracing = "0.1"

rustybuzz = { version = "0.18", optional = true }
ttf-parser = { version = "0.24", optional = true }
fontdb = { version = "0.22", optional = true }
# swash = "0.1"  # Not currently used, commented out to reduce dependencies
unicode-segmentation = "1.11"

typst-syntax = { version = "0.13.1", optional = true }

palette = { version = "0.7", default-features = false, features = ["std"] }
bitflags = "2.6"
once_cell = "1.19"
itertools = "0.14.0"

[features]
default = ["font-shaping", "syntax"]
font-shaping = ["rustybuzz", "ttf-parser", "fontdb"]
syntax = ["typst-syntax"]
